darken img + right line

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   <div class="scatola"> <!-- megabox -->
 
     <header> <!-- header -->
-      <div class="logo"></div>
-      <nav>
+      <div class="logo">
+        <div class="v1"></div>
+      </div>
+      
+      <nav> <!-- barra nav -->
         <ul>
           <li><a href="#"></a>features</li>
           <li><a href="#"></a>editorials</li>
@@ -25,16 +28,20 @@
           <li><a href="#"></a>contact</li>
         </ul>
 
-      </nav> <!-- barra nav -->
-      <div class="banner">
-        <img src="" alt="">
-        <div class="pretium">
-          <h3>Pretium ac placerat dui interdum nunc <br>
-          in eros urna morbi</h3>
+      </nav> <!-- /barra nav -->
 
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsa <br>grharum perferendis suscipit magnam adipisci, doloremque molestiae cumque optio. Et.</p>
+      <div class="banner"> <!-- banner tizia -->
+        <div class="black">
+          <div class="pretium">
+            <h1>Pretium ac placerat dui interdum nunc <br>
+            in eros urna morbi</h1>
+  
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsa <br>grharum perferendis suscipit magnam adipisci, doloremque molestiae cumque optio. Et.</p>
+          </div>
         </div>
-      </div>
+
+      </div> <!-- /banner tizia -->
+
     </header> <!-- /header -->
   
     <main class="clearfix"> <!-- sezione coi float -->
@@ -46,7 +53,9 @@
   
         <aside> <!-- primo lorem -->
           <div>
-            <div class="pianta"></div>
+            <div class="pianta">
+              <div class="black"></div>
+          </div>
             <div>
               <h3>Lorem</h3>
               <p>
@@ -61,7 +70,9 @@
   
         <section> <!-- testo dolor -->
           <div>
-            <div class="nerd"></div>
+            <div class="nerd">
+              <div class="black"></div>
+            </div>
             <h3>Lorem</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, repudiandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore aliquid cumque voluptas corrupti nemo commodi mollitia excepturi, corporis illo soluta, id, animi ducimus. Repellendus, vitae? Quidem amet alias minus ex minima atque eligendi. Dicta eveniet iste quaerat exercitationem sequi impedit ipsum minus cum ab corrupti. Omnis et molestias eveniet voluptatum adipisci consectetur voluptatem tenetur, magni vitae atque, suscipit saepe quaerat, officia non magnam minus temporibus aperiam asperiores quos beatae a? Optio totam, illum at facere, reiciendis suscipit soluta architecto adipisci expedita eveniet nulla, dolore ipsam voluptates assumenda deserunt. Quos similique sint totam necessitatibus porro reiciendis, asperiores molestias suscipit doloribus non. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores accusantium totam recusandae temporibus exercitationem cum ratione. Aut repellat facere, sed sunt ducimus modi provident voluptatem nisi ipsum? Assumenda quibusdam modi quo perspiciatis accusamus repudiandae nihil praesentium reiciendis autem tempora iure quis, laboriosam ipsa maiores eaque facilis veritatis ad velit animi!
@@ -71,7 +82,9 @@
   
         <aside> <!-- secondo lorem -->
           <div>
-            <div class="lampadina"></div>
+            <div class="lampadina">
+              <div class="black"></div>
+            </div>
             <h3>Lorem</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae autem repudiandae fugiat reprehenderit, nihil voluptatibus aspernatur omnis saepe id atque provident iusto laudantium reiciendis labore quos fugit odio, ullam ratione!
